# photo_indexer

./: CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  bench.sh  conanfile.txt
data/reports/: 2026-04-14_Linux_CycloneDx.json  2026-04-14_Linux_depdiscover.html  2026-04-14_Linux_depdiscover.json  2026-04-15_Linux_CycloneDx.json  2026-04-15_Linux_depdiscover.html  2026-04-15_Linux_depdiscover.json  2026-04-15_Linux_depdiscover.md  2026-04-15_linux_benchmarks.md
docs/architecture/: overview.md  readme.md
docs/documentation/: index.md
schemas/: metadata.fbs  metadata_generated.h
src/: main.cpp
